# httpdump

authfilter_dynamic_config/: Cargo.toml  authfilter.yaml
authfilter_dynamic_config/src/: lib.rs
authfilter_static_config/: Cargo.toml  authfilter.yaml
authfilter_static_config/src/: lib.rs
misc/: accesslog.yaml  install.sh  istio-port.sh  lua.yaml
server/: Dockerfile  deploy.yaml  main.go
